syntax = "proto3";

package de.unistuttgart.isw.sfsc.clientserver.protocol.session.heartbeat;

option java_multiple_files = true;

message HeartbeatMessage {
  string id = 1;
}
